<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_practice"
        android:name="com.gabrielsotelo.mtc.ui.DashboardFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gabrielsotelo.mtc.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_practice"
            app:destination="@id/navigation_practice" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_test"
            app:destination="@id/navigation_test" />
    </fragment>

    <fragment
        android:id="@+id/navigation_test"
        android:name="com.gabrielsotelo.mtc.ui.NotificationsFragment"
        android:label="@string/title_test"
        tools:layout="@layout/fragment_notifications" />
</navigation>